[package]
name = "breakout-with-rust-and-bevy"
version = "0.1.0"
edition = "2021"
authors = ["Dominik Stefancik <dstefancik@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Improve Bevy compile times
# Enable a small amount of optimization in debug mode
[profile-dev]
opt-level = 1

# Enable high optimizations for dependencies (including Bevy)
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12.1"
