[package]
name = "space-invaders-simple-with-rust"
version = "0.1.0"
edition = "2021"
authors = ["Dominik Stefancik <dstefancik@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
rusty_audio = "1.4.1"
rusty_time = "1.1.0"
