[package]
name = "space-invaders-with-rust-and-bevy"
version = "0.1.0"
edition = "2021"
authors = ["Dominik Stefancik <dstefancik@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
rand = "0.8.5"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
